<?xml version="1.0"?>
<package format="2">
  <name>pam_models</name>
  <version>1.0.0</version>
  <description>models of artificial pneumatic muscles</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>mpi_cmake_modules</depend>
  
  <export>
  </export>
</package>
